[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "cloudinary>=1.41.0",
    "flask-cors>=5.0.0",
    "flask>=3.0.3",
    "moviepy>=1.0.3",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pyautogui>=0.9.54",
    "requests>=2.32.3",
    "screeninfo>=0.8.1",
    "werkzeug>=3.1.3",
]
